# users

./: .pre-commit-config.yaml  Dockerfile  Justfile  alembic.ini  docker-compose.prod.yml  pyproject.toml  pyproject.txt
.github/workflows/: deploy.yml
src/: bootstrap.py  celery.py  log.py  main.py  settings.py
src/db/enums/: user.py
src/db/migrations/: env.py  script.py.mako
src/db/migrations/versions/: 2025-03-04-13-44_114122da1604.py  2025-03-04-18-40_443a3c4c7e08.py  2025-03-06-14-14_1261ca08d027.py  2025-03-17-19-21_05208bfa72b7.py  2025-03-24-15-41_069ca80caaeb.py
src/db/models/: __init__.py  user.py  user_favorite.py
src/errors/: http.py  service.py
src/integrations/: cars.py  notifications.py  payment.py  reviews.py
src/integrations/schemas/: cars.py  notifications.py
src/kafka/: db_client.py
src/kafka/depends/: services.py
src/kafka/payment/: schemas.py  views.py
src/kafka/user/: schemas.py  views.py
src/repositories/: user.py  user_favorite.py  user_repository.py
src/services/: user.py  user_favorite.py  user_service.py
src/web/: constants.py
src/web/api/me/: schemas.py  views.py
src/web/api/users/: schemas.py  views.py
src/web/depends/: integrations.py  repository.py  service.py
tests/: conftest.py  constants.py  test_for_pipeline.py
tests/factories/: base.py  user.py  user_favorite.py
tests/services/user/: conftest.py  test_update_balance.py  test_update_score.py
tests/web/: conftest.py
tests/web/api/me/: test_get_favorites.py  test_profile.py  test_update_favorite.py
tests/web/api/users/: test_change_password.py  test_change_password_code.py  test_get_users_by_ids.py  test_login.py  test_registration.py  test_verify_code.py
